Adjusted application to work with refactored migrations
