# app/models/event.rb
@@ -1,5 +1,5 @@
 class Event < ApplicationRecord
-  TYPES = %i(duty other party).freeze
+  KINDS = %i(duty other party).freeze
   STATUSES = %i(finished marked_as_finished pending unfinished).freeze
 
   MIN_VOTES = 3.freeze
@@ -18,8 +18,8 @@ class Event < ApplicationRecord
   has_many :event_votes, dependent: :destroy
   has_many :voters, through: :event_votes
 
-  validates :event_type, inclusion: { in: Event::TYPES.map(&:to_s) }
-  validates :event_status, inclusion: { in: Event::STATUSES.map(&:to_s) }
+  validates :kind, inclusion: { in: KINDS.map(&:to_s) }
+  validates :status, inclusion: { in: STATUSES.map(&:to_s) }
   validates :title, presence: true
   validates :starts_at, date: { allow_blank: true }
   validates :finishes_at, date: { allow_blank: true, after: :starts_at, message: 'must be after starts_at' }
@@ -27,21 +27,21 @@ class Event < ApplicationRecord
   after_create :add_creator_to_participants
 
   def in_review?
-    event_status.to_sym == :marked_as_finished
+    status.to_sym == :marked_as_finished
   end
 
   def votable?
     votable_types = %i(duty other)
 
     votable_types.each do |type|
-      return true if event_type.to_sym == type
+      return true if kind.to_sym == type
     end
     return false
   end
 
   def locked?(status_to_check = nil)
     locked_types = %i(finished unfinished)
-    status_to_check ||= event_status.to_sym
+    status_to_check ||= status.to_sym
 
     locked_types.each do |status|
       return true if status_to_check == status
@@ -53,20 +53,20 @@ class Event < ApplicationRecord
     event_participants.create(participant_id: creator_id)
   end
 
-  def set_event_status
-    update!(event_status: determine_event_status)
+  def set_status
+    update!(status: determine_status)
   end
 
   private
 
-  def determine_event_status
+  def determine_status
     users_count = User.all.count
     participants_count = participants.count
     votes_count = event_votes.count
 
     if participants_count < 1
       :pending
-    elsif votes_count < [users_count, Event::MIN_VOTES].min
+    elsif votes_count < [users_count, MIN_VOTES].min
       :marked_as_finished
     else
       if event_votes.where(finished: false).any?
